gitops/base/namespace-and-secret.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: signalboard
