gitops/base/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signalboard-frontend
  namespace: signalboard
spec:
  replicas: 2
  selector:
    matchLabels:
      app: signalboard-frontend
  template:
    metadata:
      labels:
        app: signalboard-frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/devesh537/signalboard-frontend:latest
          ports:
            - containerPort: 8080
          resources:
            requests: { cpu: 50m, memory: 64Mi }
            limits: { cpu: 200m, memory: 128Mi }
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities: { drop: ["ALL"] }
          readinessProbe:
            httpGet: { path: /, port: 8080 }
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet: { path: /, port: 8080 }
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: signalboard-frontend
  namespace: signalboard
spec:
  type: LoadBalancer
  selector:
    app: signalboard-frontend
  ports:
    - port: 80
      targetPort: 8080
